v1.6.1 - Initializing code cleaning